# eyeson

./: .coveragerc  .isort.cfg  .travis.yml  CHANGELOG.rst  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
src/eyeson/: __main__.py  core.py  skeleton.py  translators.py
tests/: conftest.py  context.py  test_core.py  test_main.py  test_skeleton.py  test_translators.py
